<resources>
    <string name="app_name">Adopt Planet</string>


    <string name="title_activity_login">Login</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="e_mail">E-Mail</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_choose">SignUpChooseActivity</string>

    <string name="reset_pass_alert_text">In your email sent instructions on how to reset your password</string>

    <string name="pet_account_description_1">
        Pets have the right to socialize too.
        But how? Through you! In a sense, be
        your pet\'s social media guru. Use Moofio
        on behalf of your pet and help her/him
    </string>
    <string name="title_activity_registration_follow">RegistrationFollowActivity</string>
    <string name="title_activity_main_feed">MainFeedActivity</string>
    <string name="title_activity_pet_tab">PetTabActivity</string>
    <string name="title_activity_event_tab">EventTabActivity</string>
    <string name="title_activity_search_pet">SearchPetActivity</string>
    <string name="title_activity_add_pet">AddPetActivity</string>

    <string name="toast_chose_type_first">Choose pet type first!</string>

    <string name="choose_type">Choose type</string>
    <string name="choose_breed">Choose breed</string>

    <!--PET TYPES-->
    <string-array name="pet_types">
        <item name="type_dog">Dog</item>
        <item name="type_cat">Cat</item>
        <item name="type_horse">Horse</item>
        <item name="type_fish">Fish</item>
        <item name="type_bird">Bird</item>
        <item name="type_hamster">Hamster</item>
        <item name="type_ferret">Ferret</item>
        <item name="type_rabbit">Rabbit</item>
        <item name="type_others">Others</item>
    </string-array>
    <string name="title_activity_feed">FeedActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_user_profile_edit">UserProfileEditActivity</string>
    <string name="title_activity_other_profile">OtherProfileActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_add_shelter">AddShelterActivity</string>
    <string name="title_activity_email_reset">EmailResetActivity</string>

    <string-array name="sidebar_items">
        <item>HEAD</item>
        <item>Adopt a pet</item>
        <item>Messages</item>
        <item>Friends</item>
        <item>My pets</item>
        <item>Invite</item>
        <item>My Ivents</item>
        <item>Help</item>
        <item>Buy Credits</item>
        <item>Settings</item>
    </string-array>
</resources>
