<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="adoptplanet.com.adoptplanet.view.LoginActivity"
                android:background="@drawable/z_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/imageView11"
            android:src="@drawable/z_mini_logo"
            android:layout_above="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Please login to your account"
            android:id="@+id/textView4"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView8"
                android:layout_margin="5dp"
                android:src="@drawable/z_tw"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView9"
                android:layout_margin="5dp"
                android:src="@drawable/z_fb"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView10"
                android:layout_margin="5dp"
                android:src="@drawable/z_gplus"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="or"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login_email"
            android:layout_gravity="center_horizontal"
            android:hint="@string/e_mail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/login_login"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/z_round_button"
            android:textColor="@color/white"
            android:onClick="handle_login"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forgot_password"
            android:id="@+id/textView"

            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_account"
            android:id="@+id/textView2"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</RelativeLayout>
